<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".Quiz">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question1"
        android:textSize="18sp"/>

    <RadioGroup
        android:id="@+id/radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/answer1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/answer1" />

        <RadioButton
            android:id="@+id/answer2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/answer2" />

        <RadioButton
            android:id="@+id/answer3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/answer3" />
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question2"
        android:layout_marginTop="16dp"
        android:textSize="18sp"/>

    <CheckBox
        android:id="@+id/question2_answer1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question2_answer1" />

    <CheckBox
        android:id="@+id/question2_answer2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question2_answer2" />

    <CheckBox
        android:id="@+id/question2_answer3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question2_answer3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/teal_200"
            android:text="@string/reset"
            android:layout_gravity="bottom"/>

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="16dp"
            android:text="@string/submit"
            android:layout_gravity="bottom"/>
    </LinearLayout>

</LinearLayout>